fix: jwt rest api 방식으로 변경